kubernetes/uptime-kuma/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  annotations:
    metallb.universe.tf/loadBalancerIPs: 10.0.0.112
spec:
  ipFamilyPolicy: PreferDualStack
  selector:
    app: uptime-kuma
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: LoadBalancer
