kubernetes/uptime-kuma/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime.local.vineelsai.com`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
  tls:
    secretName: local-vineelsai-com-tls
